--- a/CateringApp/templates/footer.html
+++ b/CateringApp/templates/footer.html
@@ -13,7 +13,7 @@
             <div class="post-item">
               <div class="footer-logo">
                 <img
-                  src="{% static 'assets/images/logo/catering.jpg' %}"
+                  src="{% static 'images/ecom.jpg' %}"
                   alt="footer-logo"
                 />
               </div>
@@ -65,7 +65,7 @@
           <div class="col-xl-3 col-md-6">
             <div class="post-item">
               <div class="post-title">
-                <h5>Catering Product</h5>
+                <h5>E Commerse Product</h5>
               </div>
               <div class="lab-ul footer-post">
                 {% for i in ''|foot %}
@@ -121,10 +121,10 @@
       <div class="container">
         <div class="section-wrapper">
           <p class="text-center">
-            &copy; {% now 'Y' %}  <a href="index.html">CateringPro</a> All Rights
+            &copy; {% now 'Y' %}  <a href="/">E-Commerse</a> All Rights
             Reserved By
-            <a href="https://themeforest.net/user/labartisan" target="_blank"
-              >TEKNOSys</a
+            <a href="" target="_blank"
+              >E Commerse</a
             >
             {% comment %} <script>document.write( new Date().getUTCFullYear() );</script> {% endcomment %}
           </p>
