--- a/CateringApp/templates/home.html
+++ b/CateringApp/templates/home.html
@@ -103,7 +103,7 @@
         <div class="about-wrapper p-0">
           <div class="about-title">
             <h2>
-              <span class="d-lg-block"> Welcome to Our Catering Services</span>
+              <span class="d-lg-block"> Welcome to Our E-Commerse Services</span>
             </h2>
             <p>
               Continually productize compelling quality for packed with Elated
@@ -149,7 +149,7 @@
     <div class="row">
       <div class="col-12">
         <div class="section-header">
-          <h3>Catering Products</h3>
+          <h3>E-Commerse Products</h3>
           <p>
             Conveniently customize proactive web services for leveraged
             interfaces without Globally
@@ -225,7 +225,7 @@
     <div class="row">
       <div class="col-12">
         <div class="section-header">
-          <h3>Catering Services</h3>
+          <h3>E-Commerse Services</h3>
           <p>
             Conveniently customize proactive web services for leveraged
             interfaces without Globally
@@ -399,7 +399,7 @@
     <div class="row">
       <div class="col-12">
         <div class="section-header">
-          <h3>Catering Product Gallery</h3>
+          <h3>E-Commerse Product Gallery</h3>
           <p>
             Conveniently customize proactive web services for leveraged
             interfaces without Globally
