--- a/CateringApp/templates/index.html
+++ b/CateringApp/templates/index.html
@@ -5,7 +5,7 @@
 
   <!-- Mirrored from labartisan.net/demo/PoultryFarm/poultry-farm/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 12 May 2022 10:23:42 GMT -->
   <head>
-    <title>Catering Pro</title>
+    <title>E- Commerse</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -93,9 +93,9 @@
         <div class="header-logo" style="height: 20px;">
            
           
-          <a href="index.html"
+          <a href="/"
             ><img
-              src="{% static 'assets/images/logo/catering.jpg' %}"
+              src="{% static 'images/ecom.jpg' %}"
               alt="logo"
               style="height:20px;"
           /></a>
@@ -178,7 +178,7 @@
                 <a href="index.html"
                   ><img
                     class="img-responsive"
-                    src="{% static 'assets/images/logo/catering.jpg' %} "
+                    src="{% static 'images/ecom.jpg' %}"
                     alt="logo"
                     style="height: 50px;"
                 /></a>
@@ -196,9 +196,9 @@
                       />
                     </div>
                     <div class="ht-add-content">
-                      <span style="font-size:12px">F-9/94, AWHO Flats,</span>
+                      <span style="font-size:12px">H.N., Flats Name,</span>
                       <span class="d-block " style="font-size:12px"
-                        >Jaipur, Rajasthan,INDIA</span
+                        >Your city, Your State,Country</span
                       >
                     </div>
                   </li>
@@ -212,7 +212,7 @@
                     </div>
                     <div class="ht-add-content" >
                       <span style="font-size:12px">Send Mail </span>
-                      <span class="d-block" style="font-size:12px">pcb.aar@gmail.com</span>
+                      <span class="d-block" style="font-size:12px">example@gmail.com</span>
                     </div>
                   </li>
                   <li class="d-flex flex-wrap align-items-center">
@@ -225,7 +225,7 @@
                     </div>
                     <div class="ht-add-content">
                       <span style="font-size:12px">Make Call </span>
-                      <span class="d-block" style="font-size:12px">+88-6487-5962-563</span>
+                      <span class="d-block" style="font-size:12px">+00-00000000000</span>
                     </div>
                   </li>
                 </ul>
@@ -245,7 +245,7 @@
                   <div class="logo">
                     <a href="/"
                       ><img
-                        src="{% static 'assets/images/logo/catering.jpg' %}"
+                        src="{% static 'images/ecom.jpg' %}"
                         alt="logo"
                         style="height: 50px;"
                     /></a>
