--- a/CateringApp/templates/invoice.html
+++ b/CateringApp/templates/invoice.html
@@ -19,7 +19,7 @@
   <body>
     
     <header>
-      <h1>Catering Invoice</h1>
+      <h1>E-Commerse Invoice</h1>
       <address contenteditable>
         <p>{{order.user.user.first_name}} {{order.user.user.last_name}}</p>
         <p>{{order.state}}<br />{{order.country}}, {{order.zipcode}}</p>
@@ -36,7 +36,7 @@
     <article>
       <h1>Recipient</h1>
       <address contenteditable>
-        <p>Catering Project<br /></p>
+        <p>E-Commerse Project<br /></p>
       </address>
       <table class="meta">
         <tr>
