--- a/CateringApp/templates/product_detail.html
+++ b/CateringApp/templates/product_detail.html
@@ -19,7 +19,7 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="page-header-content-area">
-            <h4 class="ph-title">Catering Products Details</h4>
+            <h4 class="ph-title">E-Commerse Products Details</h4>
             <ul class="lab-ul">
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active">Product Details</a></li>
