--- a/CateringApp/templates/about.html
+++ b/CateringApp/templates/about.html
@@ -8,7 +8,7 @@
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="page-header-content-area">
-					<h4 class="ph-title">Catering About us</h4>
+					<h4 class="ph-title">E-Commerse About us</h4>
 					<ul class="lab-ul">
 						<li><a href="index.html">Home</a></li>
 						<li><a class="active">About</a></li>
@@ -24,13 +24,13 @@
 				<div class="row align-items-center mb-15">
 					<div class="col-lg-6 col-12">
 						<div class="about-thumb">
-							<img src="{% static 'assets/images/logo/catering.jpg' %}" alt="about-thumb" style="max-width:300px;height:300px;">
+							<img src="{% static 'images/ecom.jpg' %}" alt="about-thumb" style="max-width:300px;height:300px;">
 						</div>
 					</div>
 					<div class="col-lg-6 col-12">
 						<div class="about-wrapper">
 							<div class="about-title">
-								<h2><span class="d-lg-block">Welcome to Our Catering </span>Products.</h2>
+								<h2><span class="d-lg-block">Welcome to Our E-Commerse </span>Products.</h2>
 								<p>Continually productize compelling quality for packed with elated Productize compelling
 									quality for packed with all elated themv Setting up to website and creating pages.</p>
 							</div>
