--- a/CateringApp/templates/adminindex.html
+++ b/CateringApp/templates/adminindex.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Catering Admin</title>
+    <title>E-Commerse Admin</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="{% static 'vendors/feather/feather.css' %}" />
     <link
@@ -56,10 +56,10 @@
           class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"
         >
           <a class="navbar-brand brand-logo mr-5" href="index.html"
-            ><img src="{% static 'images/logo.svg' %}" class="mr-2" alt="logo"
-          /></a>
+            ><img src="{% static 'images/mylogo.jpg' %}" class="mr-2" alt="logo"
+          />Administration</a>
           <a class="navbar-brand brand-logo-mini" href="index.html"
-            ><img src="{% static 'images/logo-mini.svg' %}" alt="logo"
+            ><img src="{% static 'images/mylogo.jpg' %}" alt="logo"
           /></a>
         </div>
         <div
@@ -165,7 +165,7 @@
                 id="profileDropdown"
               >
                 <img
-                  src="{% static 'images/faces/face23.jpg' %}"
+                  src="{% static 'images/mylogo.jpg' %}"
                   alt="profile"
                 />
               </a>
@@ -374,7 +374,7 @@
                 <li class="list active">
                   <div class="profile">
                     <img
-                      src="{% static 'images/faces/face1.jpg' %}"
+                      src="{% static 'images/mylogo.jpg' %}"
                       alt="image"
                     /><span class="online"></span>
                   </div>
