--- a/CateringApp/templates/footeradmin.html
+++ b/CateringApp/templates/footeradmin.html
@@ -5,8 +5,8 @@
       <span
         class="text-muted text-center text-sm-left d-block d-sm-inline-block " 
         >Copyright © {% now 'Y' %} Premium
-        <a href="https://www.teknosys.net/" target="_blank"
-          >TEKNOSys.</a
+        <a href="https://www.E-Commerse.net/" target="_blank"
+          >E-Commerse.</a
         >
         All rights reserved.</span
       >
