--- a/CateringApp/templates/gallery.html
+++ b/CateringApp/templates/gallery.html
@@ -9,7 +9,7 @@
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="page-header-content-area">
-					<h4 class="ph-title">Catering Products Gallery</h4>
+					<h4 class="ph-title">E-Commerse Products Gallery</h4>
 					<ul class="lab-ul">
 						<li><a href="index.html">Home</a></li>
 						<li><a class="active">Gallery</a></li>
