--- a/CateringApp/templates/product.html
+++ b/CateringApp/templates/product.html
@@ -7,7 +7,7 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="page-header-content-area">
-            <h4 class="ph-title">Catering Products</h4>
+            <h4 class="ph-title">E-Commerse Products</h4>
             <ul class="lab-ul">
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active">Products</a></li>
